# oc-student-project-10

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  devenv.nix  notebook.py  presentation.html  presentation.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: .funcignore  app.py  host.json  requirements.txt  test.http
app/HttpTrigger/: __init__.py
app/models/: __init__.py  data_models.py  model_store.py  recommendation_utils.py
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  requirements.txt
script/: deploy.sh  destroy.sh  ensure-project-name.sh  logs.sh  optimize_models.py  reduce_embeddings.py  upload_models.py
terraform/: .terraform.lock.hcl  main.tf
tests/: conftest.py  test_api.py  test_data_models.py  test_model_store.py  test_recommendation_utils.py
